infrastructure/platform/base/seaweedfs/httproute-filer.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-filer
  namespace: seaweedfs
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "seaweedfs.${domain_wahoo_li:=wahoo.li}"
  - "seaweedfs.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: seaweedfs-filer
      port: 8888
